@@ -135,7 +135,10 @@ public class MemoryUtil {
     } catch (Throwable e) {
       // This exception will get swallowed, but it's necessary for the static analysis that ensures
       // the static fields above get initialized
-      final RuntimeException failure = new RuntimeException("Failed to initialize MemoryUtil", e);
+      final RuntimeException failure = new RuntimeException(
+          "Failed to initialize MemoryUtil. Was Java started with " +
+              "`--add-opens=java.base/java.nio=ALL-UNNAMED`? " +
+              "(See https://arrow.apache.org/docs/java/install.html)", e);
       failure.printStackTrace();
       throw failure;
     }
